# vnc-mcp

./: .cookiecutter.json  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  noxfile.py  pyproject.toml
.github/: settings.yml
.github/workflows/: constraints.txt  docker-publish.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md
src/: launcher.py
src/vnc_mcp/: __init__.py  __main__.py  _assets.py  _metadata.py  mcp.py
src/vnc_mcp/utils/: asyncio.py
tests/: __init__.py  test_main.py
